--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -212,9 +212,6 @@
     <menu id="318">
       <phrase id="menutext" value="Vaccinations" />
     </menu>
-    <menu id="316">
-      <phrase id="menutext" value="Laboratory" />
-    </menu>
     <menu id="333">
       <phrase id="menutext" value="Radiology Report" />
     </menu>
@@ -2033,41 +2030,6 @@
         <phrase id="fldcaption" value="gender" />
       </field>
     </table>
-    <table id="laboratory_reports">
-      <phrase id="tblcaption" value="Laboratory Reports" />
-      <chart id="reportbysubmissionmonth">
-        <phrase id="chartcaption" value="Report by Submission Month" />
-        <phrase id="chartxaxisname" value="report month" />
-        <phrase id="chartyaxisname" value="report month" />
-      </chart>
-      <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
-      </field>
-      <field id="first_name">
-        <phrase id="fldcaption" value="First Name" />
-      </field>
-      <field id="last_name">
-        <phrase id="fldcaption" value="Last Name" />
-      </field>
-      <field id="gender">
-        <phrase id="fldcaption" value="Gender" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="DoB" />
-      </field>
-      <field id="patient_age_1">
-        <phrase id="fldcaption" value="Age" />
-      </field>
-      <field id="specimen">
-        <phrase id="fldcaption" value="Specimen" />
-      </field>
-      <field id="service_name">
-        <phrase id="fldcaption" value="Test Name" />
-      </field>
-      <field id="p_age">
-        <phrase id="fldcaption" value="Age" />
-      </field>
-    </table>
     <table id="vaccinations_report3">
       <phrase id="tblcaption" value="vaccinations report 3" />
       <field id="id">
@@ -2178,6 +2140,11 @@
         <phrase id="chartcaption" value="Visits by Month" />
         <phrase id="chartxaxisname" value="visit month" />
         <phrase id="chartyaxisname" value="visit month" />
+      </chart>
+      <chart id="visitsbymedicalscheme">
+        <phrase id="chartcaption" value="Visits by Medical Scheme" />
+        <phrase id="chartxaxisname" value="Company" />
+        <phrase id="chartyaxisname" value="Company" />
       </chart>
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
