--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/3" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/4" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -91,9 +91,6 @@
     </menu>
     <menu id="52">
       <phrase id="menutext" value="Laboratory" />
-    </menu>
-    <menu id="11">
-      <phrase id="menutext" value="Lab Specimens" />
     </menu>
     <menu id="13">
       <phrase id="menutext" value="Lab Requests" />
@@ -563,24 +560,6 @@
         <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
-    <table id="lab_specimens">
-      <phrase id="tblcaption" value="Specimens" />
-      <field id="id">
-        <phrase id="fldcaption" value="Specimen ID" />
-      </field>
-      <field id="specimen">
-        <phrase id="fldcaption" value="Specimen" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="Last Updated" />
-      </field>
-    </table>
     <table id="lab_test_reports">
       <phrase id="tblcaption" value="Test Reports" />
       <field id="id">
@@ -616,8 +595,11 @@
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Requested By" />
       </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Submission Time" />
+        <phrase id="fldcaption" value="Request DateTime" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -630,9 +612,6 @@
       </field>
       <field id="lab_test_request_id">
         <phrase id="fldcaption" value="Request ID" />
-      </field>
-      <field id="specimen_id">
-        <phrase id="fldcaption" value="Specimen" />
       </field>
       <field id="service_id">
         <phrase id="fldcaption" value="Test Title" />
@@ -1657,9 +1636,6 @@
       <phrase id="tblcaption" value="laboratory minor report" />
       <field id="id">
         <phrase id="fldcaption" value="Report ID" />
-      </field>
-      <field id="specimen">
-        <phrase id="fldcaption" value="Specimen" />
       </field>
       <field id="service_name">
         <phrase id="fldcaption" value="Test Name" />
