--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,6 +2,9 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
+    <menu id="432">
+      <phrase id="menutext" value="Cash Payments" />
+    </menu>
     <menu id="334">
       <phrase id="menutext" value="Radiology Overview" />
     </menu>
@@ -2543,6 +2546,34 @@
       </field>
       <field id="line_total">
         <phrase id="fldcaption" value="Total (Kshs)" />
+      </field>
+    </table>
+    <table id="cash_payments">
+      <phrase id="tblcaption" value="Cash Payments" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="amount">
+        <phrase id="fldcaption" value="Amount Paid (Kshs)" />
+      </field>
+      <field id="details">
+        <phrase id="fldcaption" value="Details" />
+        <phrase id="custommsg" value="Enter the details (E.g. Pharmacy bill payment)" />
+      </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Received By" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Receipt Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
   </project>
