--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,9 +2,6 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
-    <menu id="432">
-      <phrase id="menutext" value="Cash Payments" />
-    </menu>
     <menu id="334">
       <phrase id="menutext" value="Radiology Overview" />
     </menu>
@@ -49,6 +46,9 @@
     </menu>
     <menu id="24">
       <phrase id="menutext" value="Visits" />
+    </menu>
+    <menu id="432">
+      <phrase id="menutext" value="Cash Payments" />
     </menu>
     <menu id="114">
       <phrase id="menutext" value="Patient Flow" />
@@ -218,6 +218,9 @@
     <menu id="313">
       <phrase id="menutext" value="Medicine Stock" />
     </menu>
+    <menu id="433">
+      <phrase id="menutext" value="Cash Payments" />
+    </menu>
     <menu id="322">
       <phrase id="menutext" value="Income" />
     </menu>
@@ -228,10 +231,10 @@
       <phrase id="menutext" value="External Reports" />
     </menu>
     <menu id="335">
-      <phrase id="menutext" value="MOH 204A" />
+      <phrase id="menutext" value="MOH 704A" />
     </menu>
     <menu id="428">
-      <phrase id="menutext" value="MOH 204B" />
+      <phrase id="menutext" value="MOH 704B" />
     </menu>
     <menu id="317">
       <phrase id="menutext" value="vaccinations report 3" />
@@ -2568,6 +2571,33 @@
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Received By" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Receipt Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="cash_payments_report">
+      <phrase id="tblcaption" value="Cash Payments Report" />
+      <field id="id">
+        <phrase id="fldcaption" value="ID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="date_of_birth">
+        <phrase id="fldcaption" value="DoB" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="amount">
+        <phrase id="fldcaption" value="Amount Paid(Kshs)" />
+      </field>
+      <field id="details">
+        <phrase id="fldcaption" value="Details" />
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="Receipt Date" />
