--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,6 +2,9 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
+    <menu id="434">
+      <phrase id="menutext" value="Test Parameters" />
+    </menu>
     <menu id="334">
       <phrase id="menutext" value="Radiology Overview" />
     </menu>
@@ -571,20 +574,22 @@
       <field id="id">
         <phrase id="fldcaption" value="Report ID" />
       </field>
-      <field id="lab_test_requests_queue_id">
-        <phrase id="fldcaption" value="Lab Queue ID" />
+      <field id="lab_test_request_id">
+        <phrase id="fldcaption" value="Resquest ID" />
+        <phrase id="custommsg" value="Enter the Request ID" />
       </field>
       <field id="details">
-        <phrase id="fldcaption" value="Findings" />
+        <phrase id="fldcaption" value="Details" />
+        <phrase id="custommsg" value="Enter results (For tests that do not require templates)" />
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Time" />
+        <phrase id="fldcaption" value="Report Date/Time" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="lab_test_requests">
@@ -2604,6 +2609,54 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="urinalysis_parameters">
+      <phrase id="tblcaption" value="Test Parameters" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="lab_test_reports_id">
+        <phrase id="fldcaption" value="Report ID" />
+      </field>
+      <field id="parameter">
+        <phrase id="fldcaption" value="Parameter" />
+        <phrase id="fldtagvalue1" value="LEUKOCITES" />
+        <phrase id="fldtagcaption1" value="LEUKOCITES" />
+        <phrase id="fldtagvalue2" value="NITRATES" />
+        <phrase id="fldtagcaption2" value="NITRATES" />
+        <phrase id="fldtagvalue3" value="UROBILINOGEN" />
+        <phrase id="fldtagcaption3" value="UROBILINOGEN" />
+        <phrase id="fldtagvalue4" value="PROTEINS" />
+        <phrase id="fldtagcaption4" value="PROTEINS" />
+        <phrase id="fldtagvalue5" value="PH" />
+        <phrase id="fldtagcaption5" value="PH" />
+        <phrase id="fldtagvalue6" value="BLOOD" />
+        <phrase id="fldtagcaption6" value="BLOOD" />
+        <phrase id="fldtagvalue7" value="S.G" />
+        <phrase id="fldtagcaption7" value="S.G" />
+        <phrase id="fldtagvalue8" value="KETONES" />
+        <phrase id="fldtagcaption8" value="KETONES" />
+        <phrase id="fldtagvalue9" value="BILLIRUBIN" />
+        <phrase id="fldtagcaption9" value="BILLIRUBIN" />
+        <phrase id="fldtagvalue10" value="GLUCOSE" />
+        <phrase id="fldtagcaption10" value="GLUCOSE" />
+        <phrase id="fldtagvalue11" value="MICROSCOPY" />
+        <phrase id="fldtagcaption11" value="MICROSCOPY" />
+        <phrase id="fldtagvalue12" value="OTHERS" />
+        <phrase id="fldtagcaption12" value="OTHERS" />
+      </field>
+      <field id="result">
+        <phrase id="fldcaption" value="Result" />
+      </field>
+      <field id="comments">
+        <phrase id="fldcaption" value="Comments" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="date created" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="date updated" />
       </field>
     </table>
   </project>
