--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/5" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/6" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -102,7 +102,7 @@
       <phrase id="menutext" value="Laboratory" />
     </menu>
     <menu id="13">
-      <phrase id="menutext" value="Lab Requests" />
+      <phrase id="menutext" value="Requests" />
     </menu>
     <menu id="14">
       <phrase id="menutext" value="Test Details" />
@@ -114,19 +114,19 @@
       <phrase id="menutext" value="Urinalysis Parameters" />
     </menu>
     <menu id="435">
-      <phrase id="menutext" value="Lab Reports" />
+      <phrase id="menutext" value="Reports" />
     </menu>
     <menu id="102">
       <phrase id="menutext" value="Radiology" />
     </menu>
     <menu id="30">
-      <phrase id="menutext" value="Radiology Requests" />
+      <phrase id="menutext" value="Requests" />
     </menu>
     <menu id="31">
-      <phrase id="menutext" value="Radiology Test Details" />
+      <phrase id="menutext" value="Test Details" />
     </menu>
     <menu id="29">
-      <phrase id="menutext" value="Radiology Reports" />
+      <phrase id="menutext" value="Generate Report" />
     </menu>
     <menu id="54">
       <phrase id="menutext" value="Pharmacy" />
@@ -1215,19 +1215,21 @@
         <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="radiology_requests_details_id">
-        <phrase id="fldcaption" value="Request Details ID" />
+        <phrase id="fldcaption" value="Request ID" />
+        <phrase id="custommsg" value="Enter the unique Request ID" />
       </field>
       <field id="findings">
         <phrase id="fldcaption" value="Findings" />
       </field>
       <field id="attachment">
         <phrase id="fldcaption" value="Attachment" />
+        <phrase id="custommsg" value="Attach film" />
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Report By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Report Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -1247,8 +1249,11 @@
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Requested By" />
       </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Time" />
+        <phrase id="fldcaption" value="Request Date/Time" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
