--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1214,9 +1214,8 @@
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
-      <field id="radiology_requests_details_id">
+      <field id="radiology_requests_id">
         <phrase id="fldcaption" value="Request ID" />
-        <phrase id="custommsg" value="Enter the unique Request ID" />
       </field>
       <field id="findings">
         <phrase id="fldcaption" value="Findings" />
@@ -1269,6 +1268,9 @@
       </field>
       <field id="service_id">
         <phrase id="fldcaption" value="Radiology Test" />
+      </field>
+      <field id="comments">
+        <phrase id="fldcaption" value="Comments" />
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="Date Added" />
