--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,6 +2,9 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
+    <menu id="439">
+      <phrase id="menutext" value="Radiology Results" />
+    </menu>
     <menu id="437">
       <phrase id="menutext" value="Full Haemogram" />
     </menu>
@@ -127,6 +130,9 @@
     </menu>
     <menu id="29">
       <phrase id="menutext" value="Generate Report" />
+    </menu>
+    <menu id="438">
+      <phrase id="menutext" value="Reports" />
     </menu>
     <menu id="54">
       <phrase id="menutext" value="Pharmacy" />
@@ -2794,6 +2800,60 @@
       </field>
       <field id="comment">
         <phrase id="fldcaption" value="Comment" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="date created" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="date updated" />
+      </field>
+    </table>
+    <table id="patients_radiology_reports">
+      <phrase id="tblcaption" value="Radiology Reports" />
+      <field id="radiology_requests_id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient ID" />
+      </field>
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="patient_age">
+        <phrase id="fldcaption" value="Age" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="service_name">
+        <phrase id="fldcaption" value="Test Name" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
+      <field id="radiologist">
+        <phrase id="fldcaption" value="Radiologist" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Report Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="patients_radiology_reports_details">
+      <phrase id="tblcaption" value="Radiology Results" />
+      <field id="id">
+        <phrase id="fldcaption" value="id" />
+      </field>
+      <field id="radiology_requests_id">
+        <phrase id="fldcaption" value="radiology requests id" />
+      </field>
+      <field id="findings">
+        <phrase id="fldcaption" value="findings" />
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="date created" />
