--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,8 +2,8 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
-    <menu id="441">
-      <phrase id="menutext" value="Laboratory Reports" />
+    <menu id="442">
+      <phrase id="menutext" value="Full Haemogram Results" />
     </menu>
     <menu id="439">
       <phrase id="menutext" value="Radiology Results" />
@@ -54,7 +54,7 @@
       <phrase id="menutext" value="Patients" />
     </menu>
     <menu id="48">
-      <phrase id="menutext" value="Patients List" />
+      <phrase id="menutext" value="OPD Patients" />
     </menu>
     <menu id="24">
       <phrase id="menutext" value="Visits" />
@@ -87,7 +87,7 @@
       <phrase id="menutext" value="Prescriptions" />
     </menu>
     <menu id="27">
-      <phrase id="menutext" value="prescription details" />
+      <phrase id="menutext" value="Prescription Details" />
     </menu>
     <menu id="38">
       <phrase id="menutext" value="Visit Types" />
@@ -159,7 +159,7 @@
       <phrase id="menutext" value="Dispense Details" />
     </menu>
     <menu id="236">
-      <phrase id="menutext" value="Billing" />
+      <phrase id="menutext" value="Billing Details" />
     </menu>
     <menu id="174">
       <phrase id="menutext" value="Laboratory" />
@@ -183,7 +183,7 @@
       <phrase id="menutext" value="Payment Methods" />
     </menu>
     <menu id="10">
-      <phrase id="menutext" value="Invoices" />
+      <phrase id="menutext" value="Generate Bill" />
     </menu>
     <menu id="241">
       <phrase id="menutext" value="Income" />
@@ -233,8 +233,8 @@
     <menu id="318">
       <phrase id="menutext" value="Vaccinations" />
     </menu>
-    <menu id="440">
-      <phrase id="menutext" value="Laboratory Reports" />
+    <menu id="441">
+      <phrase id="menutext" value="Laboratory" />
     </menu>
     <menu id="333">
       <phrase id="menutext" value="Radiology Report" />
@@ -274,6 +274,9 @@
     </menu>
     <menu id="111">
       <phrase id="menutext" value="Vitals" />
+    </menu>
+    <menu id="440">
+      <phrase id="menutext" value="Laboratory Reports" />
     </menu>
     <menu id="42">
       <phrase id="menutext" value="Medicine Stock" />
@@ -1025,7 +1028,7 @@
       </field>
     </table>
     <table id="patients">
-      <phrase id="tblcaption" value="Patients" />
+      <phrase id="tblcaption" value="OPD Patients" />
       <field id="id">
         <phrase id="fldcaption" value="Patient ID" />
       </field>
@@ -1129,7 +1132,7 @@
       </field>
     </table>
     <table id="prescription_details">
-      <phrase id="tblcaption" value="prescription details" />
+      <phrase id="tblcaption" value="Prescription Details" />
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
@@ -2058,14 +2061,11 @@
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
-      <field id="first_name">
-        <phrase id="fldcaption" value="First Name" />
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
-      <field id="last_name">
-        <phrase id="fldcaption" value="Last Name" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="DoB" />
+      <field id="patient_age">
+        <phrase id="fldcaption" value="Age" />
       </field>
       <field id="gender">
         <phrase id="fldcaption" value="Gender" />
@@ -2096,14 +2096,11 @@
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
-      <field id="first_name">
-        <phrase id="fldcaption" value="First Name" />
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
-      <field id="last_name">
-        <phrase id="fldcaption" value="Last Name" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="DoB" />
+      <field id="patient_age">
+        <phrase id="fldcaption" value="Age" />
       </field>
       <field id="gender">
         <phrase id="fldcaption" value="Gender" />
@@ -2115,7 +2112,7 @@
         <phrase id="fldcaption" value="Status" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Vaacination Date" />
+        <phrase id="fldcaption" value="Vaccination Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -2408,7 +2405,7 @@
       <phrase id="tblcaption" value="Radiology Overview" />
     </table>
     <table id="moh204a_report">
-      <phrase id="tblcaption" value="MOH 204A Report" />
+      <phrase id="tblcaption" value="MOH 704A Report" />
       <field id="id">
         <phrase id="fldcaption" value="id" />
       </field>
@@ -2450,7 +2447,7 @@
       </field>
     </table>
     <table id="moh204b_report">
-      <phrase id="tblcaption" value="MOH 204B Report" />
+      <phrase id="tblcaption" value="MOH 704B Report" />
       <field id="id">
         <phrase id="fldcaption" value="id" />
       </field>
@@ -2701,6 +2698,9 @@
       <field id="patient_name">
         <phrase id="fldcaption" value="Patient Name" />
       </field>
+      <field id="group_concat_service_name">
+        <phrase id="fldcaption" value="Tests" />
+      </field>
       <field id="date_of_birth">
         <phrase id="fldcaption" value="date of birth" />
       </field>
@@ -2941,6 +2941,30 @@
       </field>
       <field id="report_month">
         <phrase id="fldcaption" value="report month" />
+      </field>
+    </table>
+    <table id="full_haemo_results">
+      <phrase id="tblcaption" value="Full Haemogram Results" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="lab_test_report_id">
+        <phrase id="fldcaption" value="Report ID" />
+      </field>
+      <field id="test">
+        <phrase id="fldcaption" value="Test" />
+      </field>
+      <field id="results">
+        <phrase id="fldcaption" value="Results" />
+      </field>
+      <field id="unit">
+        <phrase id="fldcaption" value="Unit" />
+      </field>
+      <field id="unit_references">
+        <phrase id="fldcaption" value="References" />
+      </field>
+      <field id="comment">
+        <phrase id="fldcaption" value="Comments" />
       </field>
     </table>
   </project>
