--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/16" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/17" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -110,17 +110,8 @@
     <menu id="14">
       <phrase id="menutext" value="Test Details" />
     </menu>
-    <menu id="539">
-      <phrase id="menutext" value="Generate Report" />
-    </menu>
     <menu id="12">
-      <phrase id="menutext" value="Normal" />
-    </menu>
-    <menu id="541">
-      <phrase id="menutext" value="Urinalysis" />
-    </menu>
-    <menu id="540">
-      <phrase id="menutext" value="Full Haemogram" />
+      <phrase id="menutext" value="Generate Report" />
     </menu>
     <menu id="435">
       <phrase id="menutext" value="Reports" />
@@ -608,6 +599,10 @@
       <field id="details">
         <phrase id="fldcaption" value="Details" />
         <phrase id="custommsg" value="Enter results (For tests that do not require templates)" />
+      </field>
+      <field id="report_template">
+        <phrase id="fldcaption" value="Report Template" />
+        <phrase id="custommsg" value="Attach report template (in PDF format)" />
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="Submitted By" />
@@ -2816,42 +2811,6 @@
       </field>
       <field id="report_month">
         <phrase id="fldcaption" value="report month" />
-      </field>
-    </table>
-    <table id="full_haemogram_report">
-      <phrase id="tblcaption" value="full haemogram report" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="lab_test_report_id">
-        <phrase id="fldcaption" value="lab test report id" />
-      </field>
-      <field id="_template">
-        <phrase id="fldcaption" value="template" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
-      </field>
-    </table>
-    <table id="urinalysis_report">
-      <phrase id="tblcaption" value="urinalysis report" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="lab_test_reports_id">
-        <phrase id="fldcaption" value="lab test reports id" />
-      </field>
-      <field id="_template">
-        <phrase id="fldcaption" value="template" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
       </field>
     </table>
     <table id="patients_dependants">
