--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/17" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/21" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -1787,11 +1787,14 @@
       <field id="dispensation_type">
         <phrase id="fldcaption" value="Type" />
       </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Prepared By" />
+      </field>
       <field id="status">
         <phrase id="fldcaption" value="Status" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Date Updated" />
