--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1715,8 +1715,11 @@
       <field id="status">
         <phrase id="fldcaption" value="Status" />
       </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Prepared By" />
+      </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Report Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
