--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1719,7 +1719,7 @@
         <phrase id="fldcaption" value="Prepared By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Report Date" />
+        <phrase id="fldcaption" value="Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -1754,8 +1754,11 @@
       <field id="visit_id">
         <phrase id="fldcaption" value="Visit ID" />
       </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Prepared By" />
+      </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
