Adjusted opd patient master/detail relations

--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -48,7 +48,7 @@
       <phrase id="menutext" value="Notifications" />
     </menu>
     <menu id="51">
-      <phrase id="menutext" value="Patients" />
+      <phrase id="menutext" value="OPD" />
     </menu>
     <menu id="48">
       <phrase id="menutext" value="Patients List" />
