--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/21" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/22" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -1001,7 +1001,7 @@
         <phrase id="fldcaption" value="Patient Name" />
       </field>
       <field id="visit_id">
-        <phrase id="fldcaption" value="Vsiti ID" />
+        <phrase id="fldcaption" value="Visit ID" />
       </field>
       <field id="height">
         <phrase id="fldcaption" value="Height (m)" />
@@ -1025,7 +1025,7 @@
         <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Vitals Date/Time" />
+        <phrase id="fldcaption" value="Time Taken" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -1677,7 +1677,7 @@
         <phrase id="fldtagcaption5" value="Medicines Issued" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Queue Date/Time" />
+        <phrase id="fldcaption" value="Queue Time" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
