--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -54,7 +54,7 @@
       <phrase id="menutext" value="Patient Flow" />
     </menu>
     <menu id="24">
-      <phrase id="menutext" value="Visits" />
+      <phrase id="menutext" value="Patient Check-Ins" />
     </menu>
     <menu id="22">
       <phrase id="menutext" value="Appointments" />
@@ -963,7 +963,7 @@
       </field>
     </table>
     <table id="patient_visits">
-      <phrase id="tblcaption" value="Visits" />
+      <phrase id="tblcaption" value="Patient Check-Ins" />
       <field id="id">
         <phrase id="fldcaption" value="Visit ID" />
       </field>
@@ -1773,10 +1773,10 @@
         <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="radiology_request_id">
-        <phrase id="fldcaption" value="radiology request id" />
+        <phrase id="fldcaption" value="Request ID" />
       </field>
       <field id="service_name">
-        <phrase id="fldcaption" value="Radiology Test" />
+        <phrase id="fldcaption" value="Test Name" />
       </field>
       <field id="cost">
         <phrase id="fldcaption" value="Cost (Kshs)" />
