--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2024/12/24" id="en-US" author="e.World Technology Limited">
+<ew-language date="2024/12/25" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -6,28 +6,28 @@
       <phrase id="menutext" value="Dashboard" />
     </menu>
     <menu id="325">
-      <phrase id="menutext" value="Facility Overview" />
+      <phrase id="menutext" value="Facility" />
     </menu>
     <menu id="326">
-      <phrase id="menutext" value="Front Office Overview" />
+      <phrase id="menutext" value="Front Office" />
     </menu>
     <menu id="327">
-      <phrase id="menutext" value="Triage Overview" />
+      <phrase id="menutext" value="Triage" />
     </menu>
     <menu id="328">
-      <phrase id="menutext" value="Doctor Overview" />
+      <phrase id="menutext" value="Doctor" />
     </menu>
     <menu id="329">
-      <phrase id="menutext" value="Laboratory Overview" />
+      <phrase id="menutext" value="Laboratory" />
     </menu>
     <menu id="334">
-      <phrase id="menutext" value="Radiology Overview" />
+      <phrase id="menutext" value="Radiology" />
     </menu>
     <menu id="330">
-      <phrase id="menutext" value="Pharmacy Overview" />
+      <phrase id="menutext" value="Pharmacy" />
     </menu>
     <menu id="331">
-      <phrase id="menutext" value="Financials Overview" />
+      <phrase id="menutext" value="Financials" />
     </menu>
     <menu id="103">
       <phrase id="menutext" value="Administrator" />
@@ -174,7 +174,10 @@
       <phrase id="menutext" value="Payment Methods" />
     </menu>
     <menu id="10">
-      <phrase id="menutext" value="Generate Bill" />
+      <phrase id="menutext" value="Generate Invoice" />
+    </menu>
+    <menu id="643">
+      <phrase id="menutext" value="Invoices" />
     </menu>
     <menu id="241">
       <phrase id="menutext" value="Income" />
@@ -304,6 +307,9 @@
     </menu>
     <menu id="542">
       <phrase id="menutext" value="Dependants" />
+    </menu>
+    <menu id="644">
+      <phrase id="menutext" value="Invoice Details" />
     </menu>
     <table id="appointments_report2">
       <phrase id="tblcaption" value="Appointments Report" />
@@ -584,7 +590,7 @@
         <phrase id="fldcaption" value="Prepared By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Invoice Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -2877,6 +2883,48 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="invoice_report">
+      <phrase id="tblcaption" value="Invoices" />
+      <field id="id">
+        <phrase id="fldcaption" value="Invoice No" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="description">
+        <phrase id="fldcaption" value="Description" />
+      </field>
+      <field id="payment_status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
+      <field id="created_by_user_id">
+        <phrase id="fldcaption" value="Prepared By" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Invoice Date" />
+      </field>
+    </table>
+    <table id="invoice_report_details">
+      <phrase id="tblcaption" value="Invoice Details" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="invoice_id">
+        <phrase id="fldcaption" value="Invoice ID" />
+      </field>
+      <field id="item">
+        <phrase id="fldcaption" value="Item" />
+      </field>
+      <field id="quantity">
+        <phrase id="fldcaption" value="Quantity" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+      <field id="total_amount">
+        <phrase id="fldcaption" value="Total (Kshs)" />
       </field>
     </table>
   </project>
